--- a/Elmla3eb/Base.lproj/Main.storyboard
+++ b/Elmla3eb/Base.lproj/Main.storyboard
@@ -960,6 +960,7 @@
                         <outlet property="collectionView" destination="7sf-t9-r3S" id="Z59-k0-bz6"/>
                         <outlet property="menuBtn" destination="hjD-Bu-6ZD" id="amL-Pi-eKl"/>
                         <outlet property="noRatingFoundLbl" destination="gNL-oT-MXB" id="UoD-zk-7OQ"/>
+                        <outlet property="ratingActivityIndector" destination="3Og-bh-LtO" id="kix-g4-YUD"/>
                         <outlet property="ratingCollectionView" destination="UGW-3t-JEI" id="5Kl-Rk-uPD"/>
                         <outlet property="ratingView" destination="aiY-od-oHD" id="H47-wD-ze4"/>
                     </connections>
@@ -986,7 +987,7 @@
                                     <rect key="frame" x="0.0" y="0.5" width="276" height="274"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                        <rect key="frame" x="0.0" y="0.0" width="276" height="274"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="276" height="275"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rate The Field" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aem-4P-Siv">
@@ -1012,6 +1013,8 @@
                                                     <userDefinedRuntimeAttribute type="number" keyPath="value">
                                                         <real key="value" value="3"/>
                                                     </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="allowsHalfStars" value="NO"/>
+                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="accurateHalfStars" value="NO"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IeI-8l-27j">
@@ -1057,6 +1060,7 @@
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="materialDesign" value="NO"/>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
+                                        <outlet property="fieldName" destination="Y1o-Rd-yTI" id="oMh-Lt-ihi"/>
                                         <outlet property="ratingStarsView" destination="aSc-7x-HdU" id="A3D-Om-4gv"/>
                                         <outlet property="skipBtn" destination="IeI-8l-27j" id="ZFR-yF-xfp"/>
                                     </connections>
@@ -1072,6 +1076,14 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <activityIndicatorView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="3Og-bh-LtO">
+                            <rect key="frame" x="139" y="139" width="37" height="37"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.47180008561643838" colorSpace="calibratedRGB"/>
+                            <color key="color" red="0.36078431370000003" green="0.68235294120000001" blue="0.1529411765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="materialDesign" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                        </activityIndicatorView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -1083,10 +1095,12 @@
                         <constraint firstItem="gNL-oT-MXB" firstAttribute="top" secondItem="aiY-od-oHD" secondAttribute="top" constant="20" id="SxE-rJ-Vvu"/>
                         <constraint firstItem="gNL-oT-MXB" firstAttribute="leading" secondItem="aiY-od-oHD" secondAttribute="leading" constant="20" id="XCC-6t-CcP"/>
                         <constraint firstItem="aIW-GI-unQ" firstAttribute="top" secondItem="aiY-od-oHD" secondAttribute="top" id="YYR-pO-U5w"/>
+                        <constraint firstItem="3Og-bh-LtO" firstAttribute="centerY" secondItem="aiY-od-oHD" secondAttribute="centerY" id="aQL-FN-RH1"/>
                         <constraint firstItem="UGW-3t-JEI" firstAttribute="leading" secondItem="aiY-od-oHD" secondAttribute="leading" constant="20" id="dfo-4U-g5t"/>
                         <constraint firstAttribute="bottom" secondItem="UGW-3t-JEI" secondAttribute="bottom" constant="20" id="pBj-6l-rpk"/>
                         <constraint firstItem="UGW-3t-JEI" firstAttribute="top" secondItem="aiY-od-oHD" secondAttribute="top" constant="20" id="qOh-fW-vQX"/>
                         <constraint firstAttribute="bottom" secondItem="gNL-oT-MXB" secondAttribute="bottom" constant="20" id="wgr-jl-qmK"/>
+                        <constraint firstItem="3Og-bh-LtO" firstAttribute="centerX" secondItem="aiY-od-oHD" secondAttribute="centerX" id="zr7-bf-zyZ"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -1895,14 +1909,14 @@
                                                                                     <rect key="frame" x="170" y="0.0" width="120" height="47"/>
                                                                                     <subviews>
                                                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKy-d6-U22">
-                                                                                            <rect key="frame" x="0.0" y="0.0" width="58" height="47"/>
+                                                                                            <rect key="frame" x="0.0" y="0.0" width="120" height="47"/>
                                                                                             <color key="backgroundColor" red="0.28977522249999998" green="0.54629486800000004" blue="0.12660208340000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                             <state key="normal" title="am">
                                                                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                                             </state>
                                                                                         </button>
                                                                                         <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rEg-pZ-hi0">
-                                                                                            <rect key="frame" x="62" y="0.0" width="58" height="47"/>
+                                                                                            <rect key="frame" x="120" y="0.0" width="0.0" height="47"/>
                                                                                             <state key="normal" title="pm">
                                                                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                                             </state>
@@ -2476,6 +2490,6 @@
         <image name="true_icon" width="47" height="47"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Dcr-HH-oXr"/>
+        <segue reference="C93-MD-lNq"/>
     </inferredMetricsTieBreakers>
 </document>
