--- a/Elmla3eb/Base.lproj/ProfileVC.xib
+++ b/Elmla3eb/Base.lproj/ProfileVC.xib
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="birthDateTxt" destination="aex-xe-mkE" id="qgN-Ww-xLd"/>
                 <outlet property="cityLbl" destination="xtd-oM-g0i" id="jBg-NN-rmd"/>
+                <outlet property="doneButton" destination="Q81-E8-FaO" id="qvE-G8-IXp"/>
                 <outlet property="favPoints" destination="QmM-fg-Dta" id="rPj-dq-MU8"/>
                 <outlet property="phoneNumTxt" destination="RRw-sR-yjA" id="kyD-bd-oqV"/>
                 <outlet property="playerPosition" destination="YcD-qx-qv0" id="Qfi-tV-7wb"/>
@@ -355,24 +356,56 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="27"/>
                             </variation>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ScN-1d-wMV">
+                            <rect key="frame" x="10" y="225" width="300" height="60"/>
+                            <subviews>
+                                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q81-E8-FaO">
+                                    <rect key="frame" x="86" y="15" width="128" height="30"/>
+                                    <color key="backgroundColor" red="0.36247184872627258" green="0.6836506724357605" blue="0.15351903438568115" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="3R6-8D-PQe"/>
+                                        <constraint firstAttribute="width" constant="128" id="R7H-dM-0dN"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                    <state key="normal" title="Done">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="materialDesign" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="doneBtnAct:" destination="-1" eventType="touchUpInside" id="UgO-R6-gZm"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="Q81-E8-FaO" firstAttribute="centerX" secondItem="ScN-1d-wMV" secondAttribute="centerX" id="8KR-8Z-m1m"/>
+                                <constraint firstItem="Q81-E8-FaO" firstAttribute="centerY" secondItem="ScN-1d-wMV" secondAttribute="centerY" id="947-VC-GlR"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="3Bl-DR-u8X" secondAttribute="trailing" constant="20" id="4mh-lA-wOW">
                             <variation key="heightClass=regular-widthClass=regular" constant="100"/>
                         </constraint>
+                        <constraint firstItem="ScN-1d-wMV" firstAttribute="top" secondItem="3Bl-DR-u8X" secondAttribute="bottom" constant="25" id="Eo4-iF-1Si"/>
                         <constraint firstItem="3Bl-DR-u8X" firstAttribute="top" secondItem="E0a-u4-UjJ" secondAttribute="bottom" constant="22" id="IpZ-lV-yAh">
                             <variation key="heightClass=regular-widthClass=regular" constant="50"/>
                         </constraint>
                         <constraint firstItem="E0a-u4-UjJ" firstAttribute="top" secondItem="5bG-a1-bvv" secondAttribute="top" id="KE9-Ee-lSw"/>
+                        <constraint firstAttribute="bottom" secondItem="ScN-1d-wMV" secondAttribute="bottom" constant="10" id="NOK-cd-FGw"/>
                         <constraint firstAttribute="trailing" secondItem="E0a-u4-UjJ" secondAttribute="trailing" id="WaM-Pj-n61"/>
                         <constraint firstItem="Eh8-93-yuc" firstAttribute="leading" secondItem="5bG-a1-bvv" secondAttribute="leading" id="c4L-0O-RBk"/>
+                        <constraint firstAttribute="trailing" secondItem="ScN-1d-wMV" secondAttribute="trailing" constant="10" id="efi-ek-KRD"/>
                         <constraint firstAttribute="trailing" secondItem="Eh8-93-yuc" secondAttribute="trailing" id="gXt-XW-0Gj"/>
                         <constraint firstItem="E0a-u4-UjJ" firstAttribute="leading" secondItem="5bG-a1-bvv" secondAttribute="leading" id="hp0-W1-hyX"/>
                         <constraint firstAttribute="bottom" secondItem="Eh8-93-yuc" secondAttribute="bottom" id="lqt-dJ-pDb"/>
                         <constraint firstItem="3Bl-DR-u8X" firstAttribute="leading" secondItem="5bG-a1-bvv" secondAttribute="leading" constant="20" id="vOJ-ud-IJo">
                             <variation key="heightClass=regular-widthClass=regular" constant="100"/>
                         </constraint>
+                        <constraint firstItem="ScN-1d-wMV" firstAttribute="leading" secondItem="5bG-a1-bvv" secondAttribute="leading" constant="10" id="zIE-pd-ZEA"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" tag="20" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k0a-Pe-WEn">
@@ -428,7 +461,7 @@
                 <constraint firstItem="WZo-ro-ceR" firstAttribute="top" secondItem="JUw-mT-sTe" secondAttribute="bottom" constant="30" id="r5L-SW-cnA"/>
                 <constraint firstItem="WZo-ro-ceR" firstAttribute="centerX" secondItem="Hu8-vN-uaR" secondAttribute="centerX" id="wWS-vq-aFM"/>
             </constraints>
-            <point key="canvasLocation" x="24.5" y="51.5"/>
+            <point key="canvasLocation" x="24" y="51"/>
         </view>
     </objects>
     <resources>
